Allow pressing any key to exit app

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p>TODO</p>
 
 			<h1>Usage</h1>
-			<p>To exit the application and return to the settings, click anywhere on the screen or press the Escape key.</p>
+			<p>To exit the application and return to the settings, click anywhere on the screen or press any key.</p>
 
 			<button id="settings-button">Start Web Application</button>
 			
