--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<!-- movement -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Movement</h2>
+					<h2>Movement:</h2>
 					<label for="settings-movement-left-to-right">
 						<input type="radio" name="settings-movement" id="settings-movement-left-to-right" value="left-to-right" checked /> Left to right
 					</label>
@@ -55,7 +55,7 @@
 			<!-- number of stripes -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Number of stripes</h2>
+					<h2>Number of stripes:</h2>
 					<label for="settings-number-of-stripes">
 						<input type="text" name="settings-number-of-stripes" id="settings-number-of-stripes" value="10" /> stripes
 					</label>
@@ -66,7 +66,7 @@
 			<!-- speed -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Speed</h2>
+					<h2>Speed:</h2>
 					<label for="settings-speed">
 						<input type="text" name="settings-speed" id="settings-speed" value="10" /> seconds
 					</label>
@@ -77,7 +77,7 @@
 			<!-- stop after -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Stop after</h2>
+					<h2>Stop after:</h2>
 					<label for="settings-stop-after">
 						<input type="text" name="settings-stop-after" id="settings-stop-after" value="10" /> seconds
 					</label>
@@ -88,7 +88,7 @@
 			<!-- colors -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Colors</h2>
+					<h2>Colors:</h2>
 					<label for="settings-colors-main">
 						<input type="text" name="settings-colors" id="settings-colors-main" value="10" /> main stripes
 					</label>
@@ -102,7 +102,7 @@
 			<!-- fullscreen -->
 			<div class="clearfix">
 				<div class="setting">
-					<h2>Run in fullscreen?</h2>
+					<h2>Run in fullscreen:</h2>
 					<label for="settings-fullscreen-on">
 						<input type="radio" name="settings-fullscreen" id="settings-fullscreen-on" value="1" checked /> On
 					</label>
