--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>MDDS Web Application</title>
+		<link rel="stylesheet" href="lib/spectrum/spectrum.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
@@ -128,6 +129,7 @@
 		
 		<!-- scripts -->
 		<script src="js/jquery.min.js"></script>
+		<script src="lib/spectrum/spectrum.js"></script>
 		<script src="js/main.js"></script>
 		
 	</body>
