Update compatibility text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="col-sm-12">
 				
 					<h1>Welcome</h1>
-					<p>This web application helps researchers of MdDS (Mal de Débarquement Syndrome) treat patients and find a cure. A common treatment involves the patient watching stripes moving across a screen. This web application is intended to provide this treatment in a browser- and platform-independent way.</p>
+					<p>This web application helps researchers of MdDS (Mal de Débarquement Syndrome) treat patients and find a cure. A common treatment involves the patient watching stripes moving across a screen. This web application provides this treatment, and works on any modern browser or mobile device.</p>
 				
 					<h1>Disclaimer</h1>
 					<p>This application should only be used under the direction of a doctor.</p>
