--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 						</div>
 						<div class="form-group col-sm-6">
 							<label for="settings-fullscreen">Fullscreen mode <a href="#" data-popup="Fullscreen mode will take up the whole screen, press the escape key to exit fullscreen mode">(?)</a></label>
-							<input type="text" class="form-control" id="settings-fullscreen" />
+							<select class="form-control" id="settings-fullscreen">
+								<option value="1" selected>On</option>
+								<option value="0">Off</option>
+							</select>
 						</div>
 					</fieldset>
 					
