Apply settings and animate stripes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<fieldset>
 						<div class="form-group col-sm-6">
 							<label for="settings-stop-after">Stop after (seconds) <a href="#" data-popup="This is the number of seconds after which the application should automatically exit and return to the settings screen">(?)</a></label>
-							<input type="text" class="form-control integers-only" id="settings-stop-after" />
+							<input type="text" class="form-control integers-only" id="settings-stop-after" placeholder="Optional" />
 						</div>
 						<div class="form-group col-sm-6">
 							<label for="settings-fullscreen">Fullscreen mode <a href="#" data-popup="Fullscreen mode will take up the whole screen, press the escape key to exit fullscreen mode">(?)</a></label>
