IE 11 fullscreen support and notice when N/A

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<input type="text" class="form-control integers-only" id="settings-stop-after" placeholder="Optional" />
 						</div>
 						<div class="form-group col-sm-6">
-							<label for="settings-fullscreen">Fullscreen mode <a href="#" data-popup="Fullscreen mode will take up the whole screen, press the escape key to exit fullscreen mode">(?)</a></label>
+							<label for="settings-fullscreen">Fullscreen mode <a href="#" data-popup="Fullscreen mode (not available in all browsers) will take up the whole screen; press the escape key to exit fullscreen mode">(?)</a></label>
 							<select class="form-control" id="settings-fullscreen">
 								<option value="on" selected>On</option>
 								<option value="off">Off</option>
