Updated defaults and added reset button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 				<h1>Usage</h1>
 				<p>To exit the application and return to the settings, click anywhere on the screen or press any key.</p>
 
-				<button class="btn btn-primary btn-lg" id="settings-button">Start Web Application</button>
+				<button class="btn btn-primary btn-lg" id="settings-run-button">Start Web Application</button>
+				<button class="btn btn-default btn-lg" id="settings-reset-button">Reset Defaults</button>
 				
 			</div>
 			
