Changed "I" to "you" for accept text on first page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 					
 					<h1>Accept</h1>
-					<p>Click the button below to accept the terms of the disclaimer and license above. By using this application, I accept full responsibility and liability for any issues or side effects that arise from its use.</p>
+					<p>Click the button below to accept the terms of the disclaimer and license above. By using this application, you accept full responsibility and liability for any issues or side effects that arise from its use.</p>
 					<button class="btn btn-danger btn-lg" id="disclaimer-button">Accept and Continue</button>
 				
 				</div>
