Adjust explanation for audio frequency

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							</select>
 						</div>
 						<div class="form-group col-sm-6">
-							<label for="settings-frequency">Metronome frequency (Hz) <a href="#" data-popup="This is frequency with which the metronome scale should be played">(?)</a></label>
+							<label for="settings-frequency">Metronome frequency (Hz) <a href="#" data-popup="This is frequency with which the metronome scale should be played; some devices may not play all notes">(?)</a></label>
 							<input type="text" class="form-control decimals-only" id="settings-frequency" />
 							A full scale will be played every <span id="settings-frequency-explanation"></span> seconds.
 						</div>
