--- a/index.html
+++ b/index.html
@@ -149,35 +149,35 @@
 		
 		<!-- audio -->
 		<div class="default-hidden">
-			<audio class="default-hidden" data-note="c1">
+			<audio preload="auto" data-note="c1">
 				<source src="lib/mp3-piano-sound/mp3/c1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/c1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="d1">
+			<audio preload="auto" data-note="d1">
 				<source src="lib/mp3-piano-sound/mp3/d1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/d1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="e1">
+			<audio preload="auto" data-note="e1">
 				<source src="lib/mp3-piano-sound/mp3/e1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/e1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="f1">
+			<audio preload="auto" data-note="f1">
 				<source src="lib/mp3-piano-sound/mp3/f1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/f1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="g1">
+			<audio preload="auto" data-note="g1">
 				<source src="lib/mp3-piano-sound/mp3/g1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/g1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="a1">
+			<audio preload="auto" data-note="a1">
 				<source src="lib/mp3-piano-sound/mp3/a1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/a1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="b1">
+			<audio preload="auto" data-note="b1">
 				<source src="lib/mp3-piano-sound/mp3/b1.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/b1.ogg" type="audio/ogg">
 			</audio>
-			<audio class="default-hidden" data-note="c2">
+			<audio preload="auto" data-note="c2">
 				<source src="lib/mp3-piano-sound/mp3/c2.mp3" type="audio/mpeg">
 				<source src="lib/ogg-piano-sound/ogg/c2.ogg" type="audio/ogg">
 			</audio>
