Set default metronome to off

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 							<div class="form-group col-sm-6">
 								<label for="settings-metronome">Metronome <a href="#" data-popup="Metronome (not available in all browsers) plays 14 notes of a piano scale in a loop">(?)</a></label>
 								<select class="form-control" id="settings-metronome">
-									<option value="on" selected>On</option>
-									<option value="off">Off</option>
+									<option value="on">On</option>
+									<option value="off" selected>Off</option>
 								</select>
 							</div>
 							<div class="form-group col-sm-6">
