Save settings each time app is run

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					Please report issues and feature requests <a href="https://github.com/antonyakushin/MdDS/issues" target="_blank">here</a>. If you are reporting a bug, please make sure to provide enough information for us to reproduce the issue (a detailed description, screenshot, or screen recording is preferred). Please also indicate your device or operating system.</p>
 					
 					<h1>System Requirements</h1>
-					<p>On Windows and Mac, this application supports the latest versions of the following browsers: Google Chrome, Mozilla Firefox, Internet Explorer 10+, Safari, Opera, and Microsoft Edge. Mobile device support varies by device and vendor (the latest versions of major mobile browsers are typically supported). This application works in browsers which support HTML5 Canvas and requestAnimationFrame().</p>
+					<p>On Windows and Mac, this application supports the latest versions of the following browsers: Google Chrome, Mozilla Firefox, Internet Explorer 10+, Safari, Opera, and Microsoft Edge. Mobile device support varies by device and vendor (the latest versions of major mobile browsers are typically supported). This application works in browsers which support HTML5 Canvas and requestAnimationFrame(). This application also uses cookies and local browser storage to save settings.</p>
 					
 					<h1>Disclaimer</h1>
 					<p>This application should only be used under the direction of a doctor.</p>
@@ -193,6 +193,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="lib/spectrum/spectrum.js"></script>
+		<script src="lib/js-cookie/src/js.cookie.js"></script>
 		<script src="js/main.js"></script>
 		
 	</body>
