Explicitly set canvas width and height attributes on resize; Remove jQuery canvas reference

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<!-- app panel (outside container) -->
 		<div id="app-panel" class="default-hidden">
 			
-			<canvas id="app-canvas" width="1024" height="768"></canvas>
+			<canvas id="app-canvas"></canvas>
 			
 		</div>
 
