Correct path to GitHub repository

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</div>
 					
 					<p><strong>Use Offline:</strong><br />
-					This web application can be used offline if downloaded from <a href="okn-stripes-visualization.zip">here</a>. After downloading, unzip the downloaded file to a location on your computer and open index.html in your web browser. This code is open-source, and available to everyone on <a href="https://github.com/antonyakushin/okn-stripes-visualization.zip" target="_blank">GitHub</a> under the MIT License (below).</p>
+					This web application can be used offline if downloaded from <a href="okn-stripes-visualization.zip">here</a>. After downloading, unzip the downloaded file to a location on your computer and open index.html in your web browser. This code is open-source, and available to everyone on <a href="https://github.com/antonyakushin/okn-stripes-visualization" target="_blank">GitHub</a> under the MIT License (below).</p>
 					
 					<p><strong>Report Bugs or Request Features:</strong><br />
 					Please report issues and feature requests <a href="https://github.com/antonyakushin/okn-stripes-visualization/issues" target="_blank">here</a>. If you are reporting a bug, please make sure to provide enough information for us to reproduce the issue (a detailed description, screenshot, or screen recording is preferred). Please also indicate your device or operating system.</p>
